force-app/main/default/objects/CCS_Contract_Amendment__c/CCS_Contract_Amendment__c.object-meta.xml
<CustomObject>
    <label>Contract Amendment</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>