force-app/main/default/objects/CCS_Contract_Amendment__c/fields/Amended_Date__c.field-meta.xml
<CustomField>
    <fullName>Amended_Date__c</fullName>
    <inlineHelpText>Provides the date for which the contract amendment was in place</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>