force-app/main/default/objects/CCS_Contract_Amendment__c/fields/Amendment_Type__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Type__c</fullName>
    <inlineHelpText>Confirms the type of contract amendment activity i.e An Extension or variation</inlineHelpText>
    <label>Amendment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Variation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>