force-app/main/default/objects/CCS_Contract_Amendment__c/fields/CCS_Contract__c.field-meta.xml
<CustomField>
    <fullName>CCS_Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>CCS_Contract__c</referenceTo>
    <relationshipLabel>Completed Contract Amendments</relationshipLabel>
    <relationshipName>CCS_Contract_Amendments1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>