force-app/main/default/objects/CCS_Contract_Amendment__c/fields/Contract_Amendment_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amendment_External_Id__c</fullName>
    <description>External Id (not generated by Salesforce) to be used for reference when upserting data from external systems.</description>
    <externalId>true</externalId>
    <label>Contract Amendment External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>