force-app/main/default/objects/CCS_Contract_Amendment__c/fields/Contract_Amendment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amendment_Reference_Number__c</fullName>
    <inlineHelpText>Provides the unique reference for the contract amendment. N.B This is a sequential number based on the contract reference and a -01, 02 etc. The contract amendment related list should be reviewed to determine this number</inlineHelpText>
    <label>Contract Amendment Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>