force-app/main/default/objects/CCS_Contract_Amendment__c/fields/Contract_Variation_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Variation_Value__c</fullName>
    <inlineHelpText>Provides the value of the variation. This field will be blank where the amendment relates to an extension</inlineHelpText>
    <label>Contract Variation Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>