force-app/main/default/objects/CCS_Contract_Amendment__c/fields/Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Date__c</fullName>
    <inlineHelpText>Where an extension is undertaken, this provides the revised contract end date. For variations, this field will be blank</inlineHelpText>
    <label>New End Date</label>
    <type>Date</type>
</CustomField>