force-app/main/default/objects/CCS_Contract_Amendment__c/validationRules/Validation_Rule_For_Amendment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_For_Amendment_Date</fullName>
    <active>true</active>
    <description>If Amendment Completed flag is set to true, Amendment Date must be completed</description>
    <errorConditionFormula>ISBLANK(  Amended_Date__c  ) &amp;&amp; ( Amendment_Completed__c = true)</errorConditionFormula>
    <errorMessage>If Amendment Completed flag is set to true, Amendment Date must be completed.</errorMessage>
</ValidationRule>