force-app/main/default/objects/CCS_Contract_Amendment__c/validationRules/Validation_Rule_For_New_Contract_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_For_New_Contract_Value</fullName>
    <active>true</active>
    <description>If Amendment Type is set to Variation, New Contract Value must be populated</description>
    <errorConditionFormula>ISBLANK(    Contract_Variation_Value__c    ) &amp;&amp; (   ISPICKVAL( Amendment_Type__c , &quot;Variation&quot;) )</errorConditionFormula>
    <errorMessage>If Amendment Type is set to Variation, New Contract Value must be populated.</errorMessage>
</ValidationRule>