force-app/main/default/objects/CCS_Contract_Amendment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCS_Contract__c</columns>
    <columns>Contract_Amendment_Reference_Number__c</columns>
    <columns>Amendment_Type__c</columns>
    <columns>Contract_Variation_Value__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>megan lancaster</value>
    </filters>
    <label>All</label>
</ListView>